@@ -4,18 +4,18 @@ import org.asciidoctor.ast.StructuralNode;
 import org.asciidoctor.extension.BlockProcessor;
 import org.asciidoctor.extension.Reader;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class YellBlockProcessor extends BlockProcessor {
 
     @SuppressWarnings("serial")
-    private static Map<String, Object> configs = new HashMap<String, Object>() {{
-        put("contexts", Arrays.asList(":listing"));
-        put("content_model", ":compound");
-    }};
+    private static Map<String, Object> configs = Map.of(
+            "contexts", List.of(":listing"),
+            "content_model", ":compound"
+    );
 
     public YellBlockProcessor(String name, Map<String, Object> config) {
         super(name, configs);
@@ -23,17 +23,11 @@ public class YellBlockProcessor extends BlockProcessor {
 
     @Override
     public Object process(StructuralNode parent, Reader reader, Map<String, Object> attributes) {
-        List<String> lines = reader.readLines();
-        String upperLines = null;
-        for (String line : lines) {
-            if (upperLines == null) {
-                upperLines = line.toUpperCase();
-            } else {
-                upperLines = upperLines + "\n" + line.toUpperCase();
-            }
-        }
+        final String upperLines = reader.readLines()
+                .stream()
+                .map(String::toUpperCase)
+                .collect(Collectors.joining("\n"));
 
-        return createBlock(parent, "paragraph", Arrays.asList(upperLines), attributes, new HashMap<>());
+        return createBlock(parent, "paragraph", List.of(upperLines), attributes, new HashMap<>());
     }
-
 }
